# RIPGUARD

./: .gitignore  README.md  diff.txt
.github/workflows/: android.yml  build.yml  server.yml
Android/: build.gradle.kts  settings.gradle.kts
Android/app/: build.gradle.kts  proguard-rules.pro
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/com/skyo/ripguard/: ConfigManager.kt  MainActivity.kt  ViewModelSingleton.kt  Websocket.kt
Android/app/src/main/java/com/skyo/ripguard/controller/: ChromeController.kt
Android/app/src/main/java/com/skyo/ripguard/model/: Deteksi.kt  Edukasi.kt
Android/app/src/main/java/com/skyo/ripguard/ui/beranda/: Beranda.kt
Android/app/src/main/java/com/skyo/ripguard/ui/deteksi/: Camera.kt  DetectionDialog.kt  DeteksiScreen.kt  ErrorAlert.kt  ScanImage.kt  SuccessDialog.kt
Android/app/src/main/java/com/skyo/ripguard/ui/edukasi/: Edukasi.kt  EdukasiContent.kt  FAB.kt
Android/app/src/main/java/com/skyo/ripguard/ui/lokasi/: Lokasi.kt  RipInfoBottomSheet.kt  TopNavBar.kt
Android/app/src/main/java/com/skyo/ripguard/ui/navbar/: Destination.kt  Navbar.kt
Android/app/src/main/java/com/skyo/ripguard/ui/theme/: Color.kt  Theme.kt  Type.kt
Android/app/src/main/java/com/skyo/ripguard/utility/: CameraRequester.kt  NotifRequester.kt
Android/app/src/main/java/com/skyo/ripguard/viewmodel/: Deteksi.kt  Edukasi.kt  Location.kt  Navbar.kt
Android/app/src/main/res/drawable/: ripguard.xml
Android/app/src/main/res/values/: strings.xml  themes.xml
Android/gradle/: libs.versions.toml
Android/gradle/wrapper/: gradle-wrapper.properties
Server/: .gitignore  Cargo.toml
Server/src/: app.rs  cli.rs  config.rs  logger.rs  main.rs  model.rs  yolo.rs
Server/src/handlers/: detect.rs  mod.rs  report.rs  websocket.rs
Server/src/lib/ripguard-adapter/: Cargo.toml
Server/src/lib/ripguard-adapter/src/: app.rs  lib.rs  yolo.rs
Server/src/lib/ripguard-cli/: Cargo.toml
Server/src/lib/ripguard-cli/src/: lib.rs
Server/src/lib/ripguard-config/: Cargo.toml
Server/src/lib/ripguard-config/src/: lib.rs
Server/src/lib/ripguard-handler/: Cargo.toml
Server/src/lib/ripguard-handler/src/: detect.rs  image.rs  lib.rs  report.rs  websocket.rs
Server/src/lib/ripguard-logger/: Cargo.toml
Server/src/lib/ripguard-logger/src/: lib.rs
Server/src/lib/ripguard-model/: Cargo.toml
Server/src/lib/ripguard-model/src/: app_state.rs  detection.rs  lib.rs  response.rs
Server/src/lib/ripguard-route/: Cargo.toml
Server/src/lib/ripguard-route/src/: http.rs  lib.rs  ws.rs
Server/src/lib/ripguard-service/: Cargo.toml
Server/src/lib/ripguard-service/src/: detect_service.rs  detection.rs  draw_rect.rs  enrich_weather.rs  file_deletor.rs  global_detector.rs  grab_frame.rs  lib.rs  run_detection.rs
Server/src/routes/: http.rs  mod.rs  ws.rs
Server/src/services/: detect_service.rs  detection.rs  draw_rect.rs  enrich_weather.rs  file_deletor.rs  global_detector.rs  grab_frame.rs  mod.rs  run_detection.rs
YoloV8/: data.yaml  scrap.py  train.py
config/: ripguard.json
