[package]
name = "YoloV8"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["ws"] }
futures = "0.3.32"
image = "0.25.10"
imageproc = "0.26.1"
ndarray = "0.17.2"
onnxruntime = "0.0.14"
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
reqwest = { version = "0.13.2", features = ["json"] }
rusttype = "0.9.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
log = "0.4.29"
