[package]
name = "YoloV8"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
futures = "0.3.32"
image = "0.25.10"
imageproc = "0.26.1"
ndarray = "0.17.2"
onnxruntime = "0.0.14"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
log = "0.4.29"
clap = { version = "4.6.1", features = ["derive"] }
fern = { version = "0.7.1", features = ["colored"] }
humantime = "2.3.0"
chrono = "0.4.44"
toml = "1.1.2"
rand = "0.10.1"
