[workspace]
members = [
    "src/bin",
    "src/lib/ripguard-adapter",
    "src/lib/ripguard-cli",
    "src/lib/ripguard-config",
    "src/lib/ripguard-handler",
    "src/lib/ripguard-logger",
    "src/lib/ripguard-model",
    "src/lib/ripguard-route",
    "src/lib/ripguard-service",
]
resolver = "3"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
anyhow = "1.0.103"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
ab_glyph = "0.2.32"
chrono = "0.4.45"
image = "0.25.10"
imageproc = "0.27.0"
log = "0.4.33"
ndarray = "0.17.2"
ort = { version = "2.0.0-rc.12", features = [
    "load-dynamic",
    "api-24",
    "std",
    "tls-rustls",
], default-features = false }
rand = "0.10.1"
reqwest = { version = "0.13.4", features = [
    "json",
    "rustls",
], default-features = false }
tokio = { version = "1.52.3", features = ["full"] }
axum = { version = "0.8.9", features = ["ws", "multipart"] }
base64 = "0.22.1"
fern = { version = "0.7.1", features = ["colored"] }
humantime = "2.3.0"
toml = "1.1.2+spec-1.1.0"
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
libloading = "0.9.0"

ripguard-adapter = { path = "src/lib/ripguard-adapter" }
ripguard-model = { path = "src/lib/ripguard-model" }
ripguard-config = { path = "src/lib/ripguard-config" }
ripguard-logger = { path = "src/lib/ripguard-logger" }
ripguard-route = { path = "src/lib/ripguard-route" }
ripguard-service = { path = "src/lib/ripguard-service" }
ripguard-cli = { path = "src/lib/ripguard-cli" }
ripguard-handler = { path = "src/lib/ripguard-handler" }

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3

# Fast builds for testing
[profile.fast]
inherits = "dev"
opt-level = 2
incremental = true
codegen-units = 256
lto = false

# Production build
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
panic = "abort"
strip = "debuginfo"

# Maximum performance build
[profile.max]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = "symbols"
