[package]
name = "ripguard-handler"
version = "0.2.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
axum.workspace = true
serde_json.workspace = true
chrono.workspace = true
log.workspace = true
tokio.workspace = true
futures.workspace = true
ripguard-model.workspace = true
ripguard-service.workspace = true
