[package]
name = "ripguard-service"
version = "0.2.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
ab_glyph.workspace = true
chrono.workspace = true
image.workspace = true
imageproc.workspace = true
log.workspace = true
ndarray.workspace = true
ort.workspace = true
rand.workspace = true
reqwest.workspace = true
tokio.workspace = true
axum.workspace = true
base64.workspace = true
serde_json.workspace = true

ripguard-model.workspace = true

[features]
fake_detections = []
